[gd_scene load_steps=12 format=3 uid="uid://0hc7w5a177v8"]

[ext_resource type="Script" path="res://Mobs/activesquare.gd" id="2_iannb"]

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(32, 32)

[sub_resource type="Animation" id="Animation_sjcac"]
resource_name = "Attack"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.75, 0.85, 1.1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.523599, -0.523599, 1.39626, 1.39626, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Hitbox:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.75, 0.85, 1.1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.523599, -0.523599, 1.39626, 1.39626, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Hitbox:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.75, 0.85, 1.1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(1, 1.3), Vector2(1, 1.3), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.75, 0.85, 1.1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(1, 1.3), Vector2(1, 1.3), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_nvpdg"]
resource_name = "Death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.241484, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.01, 0.01)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_a2hvg"]
resource_name = "Hit"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1.68179, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_1eb7r"]
resource_name = "Idle"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.9, 1.05, 1.2, 1.35, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 0.8), Vector2(1, 1), Vector2(1.1, 0.8), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_p64nc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rrcnm"]
_data = {
"Attack": SubResource("Animation_sjcac"),
"Death": SubResource("Animation_nvpdg"),
"Hit": SubResource("Animation_a2hvg"),
"Idle": SubResource("Animation_1eb7r"),
"RESET": SubResource("Animation_p64nc")
}

[sub_resource type="Animation" id="Animation_gv7nc"]
resource_name = "Hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.490196, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_by41x"]
_data = {
"Hit": SubResource("Animation_gv7nc")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7017w"]
size = Vector2(444, 32)

[node name="activesquare" type="CharacterBody2D"]
z_index = 10
collision_layer = 128
collision_mask = 14
floor_snap_length = 16.0
script = ExtResource("2_iannb")

[node name="Physics Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, -16)
scale = Vector2(1, 2)
shape = SubResource("2")

[node name="Sprite" type="Node2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="Sprite"]
color = Color(0.964706, 0.247059, 0.298039, 1)
polygon = PackedVector2Array(-16, -48, -16, 16, 16, 16, 16, -48)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
libraries = {
"": SubResource("AnimationLibrary_rrcnm")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Sprite"]
libraries = {
"": SubResource("AnimationLibrary_by41x")
}

[node name="Polygon2D2" type="Polygon2D" parent="Sprite"]
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(4, -42, 12, -42, 12, -34, 4, -34)

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 4.5
one_shot = true

[node name="WalkTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hurtbox"]
scale = Vector2(1.2, 1.2)
polygon = PackedVector2Array(-16, -48, 16, -48, 16, 16, -16, 16)

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hitbox"]
polygon = PackedVector2Array(-16, -48, 16, -48, 16, 16, -16, 16)

[node name="DetectionRange" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
position = Vector2(206, 0)
shape = SubResource("RectangleShape2D_7017w")

[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
[connection signal="timeout" from="WalkTimer" to="." method="_on_walk_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_timer_timeout" flags=18]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_entered" from="DetectionRange" to="." method="_on_detection_range_body_entered"]
